# nautilus-create-desktop-entry

./: .gitignore  README.md  meson.build  meson_post_install.py
data/: meson.build  nautilus-create-desktop-entry.gresource.xml  nautilus-create-desktop-entry.metainfo.xml.in
data/ui/: create.ui  create.ui~
nautilus-create-desktop-entry/: nautilus-create-desktop-entry.py.in
po/: POTFILES.in  meson.build  pt.po
src/: utils.py
src/windows/: create.py
